Fix zoom overflow
The big numbers affected in this commit currently overflow into the surrounding
region when a user increases text size but doesn't otherwise zoom. This corrects
that by reducing the sizes of the big numbers as they run out of space based on
em sizes. This will not make them illegible as they are still enormous in
comparison to the copy text.

--- a/app/assets/stylesheets/frontend/views/_how-gov-works.scss
+++ b/app/assets/stylesheets/frontend/views/_how-gov-works.scss
@@ -73,6 +73,10 @@
       line-height: 1;
     }
 
+    @media (max-width: 65em) {
+      font-size: .75em;
+    }
+
     @include govuk-media-query($from: tablet, $until: 815px) {
       &--small .feature-value__count {
         font-size: 3.85em;
